tests/sema/fail/v31_fail_cptr_integer.ep
# COMPILE_FAIL_CONTAINS: cptr expected str, u8[], or FFI-safe struct, got i64
fun main(): void {
    let p = cptr(1)
}
